--- a/week-2/my-berkshire-site.html
+++ b/week-2/my-berkshire-site.html
@@ -14,13 +14,13 @@
   <ul>
   <li><a href=#>A Message From Warren E. Buffett</a></li>
   <li><a href=#>News Releases</a> </li>
-  <p>Updated November 6, 2015</p>
+  Updated November 6, 2015
   <li><a href=#>Updated November 6, 2015</a></li>
   <li><a href=#>Annual & Interim Reports</a></li>
-    <p>Updated November 6, 2015</p>
+    Updated November 6, 2015
     <li>Updated November 6, 2015</li>
     <li><a href=#>Warren Buffett's Letters to Berkshire Shareholders</a></li>
-    <p>Updated February 28, 2015</p>
+    Updated February 28, 2015
     <li><a href=#>Updated February 28, 2015</a></li>
     <li><a href=#>Special Letters From Warren & Charlie RE:Past, Present and Future</a></li>
     <li><a href=#>Charlie Munger's Letters to Wesco Shareholders</a></li>
@@ -28,13 +28,12 @@
     <li><a href=#>Annual Meeting Information</a></li>
     <li><a href=#>Links to Berkshire Subsidiary Companies</a></li>
     <li><a href=#>Celebrating 50 Years of a Profitable Partnership</a></li>
-    <p>(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)
-    </p>
+    (A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)
     <li><a href=#>Corporate Governance</a></li>
     <li><a href=#>Comparative Rights and Relative Prices of Class A and B Stock</a></li>
     <li><a href=#>Owner's Manual</a></li>
-Berkshire Activewear
-Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock
+    <li>Berkshire Activewear</li>
+    <li>Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock<li>
   </ul>
   <hr>
   <a href=/imgs/geicoimg.png></a>
@@ -48,8 +47,6 @@ WWW.GEICO.COM OR CALL 1-888-395-6349, 24 HOURS A DAY
   <hr>
   <a href="http://www.berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
 </body>
-  <footer>
-     <p>Copyright © 1978-2015 Berkshire Hathaway Inc.</p>
-  </footer>
+<p>Copyright © 1978-2015 Berkshire Hathaway Inc.</p>
 
   </html>
