Add reflection and update image link

--- a/week-2/my-berkshire-site.html
+++ b/week-2/my-berkshire-site.html
@@ -1,26 +1,35 @@
+<!--
+- What was it like to translate your previous learning with HTML into an actual site?
+- Ans: It was great to see how a site was actually created with the concepts we learned.
+- How was it researching and using semantic HTML5 elements?
+- Ans: I was interested to see how HTML has evolved. Now when I look at a site it's easy to see which ones are using modern techniques vs legacy techniques.
+- How did you do at keeping to best practices (i.e. no formatting in the HTML)?
+- Ans: This was a relief for me. It highlights a major reason why I decided to pursue DBC. I feel like I know what CAN be done, but now I'm learning what SHOULD be done.
+- What seems good and bad about HTML?
+- Ans: The good part is that you can build a site very easily and the tags are not very complex. The bad part is that the work can be repetitive. I'm hoping we will learn how to make it less manual soon! :)
+- What tricks do you have for remembering how to write HTML?
+- Ans: It's easy for me to get lost when the code starts building up. I always try to keep the skeleton of a basic HTML page in mind as I go. This helps me remember what I'm actually trying to do when I am working on the detail of a page.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
    <title>BERKSHIRE HATHAWAY INC</title>
   </head>
   <body>
-  <h1>
-  BERKSHIRE HATHAWAY INC
-  </h1>
-  <h2>
-  3555 Farnam Street Omaha, NE 68131 Official Home Page
-  </h2>
+    <h1>BERKSHIRE HATHAWAY INC</h1>
+  <h2>3555 Farnam Street Omaha, NE 68131 Official Home Page</h2>
   <hr>
   <ul>
-  <li><a href=#>A Message From Warren E. Buffett</a></li>
-  <li><a href=#>News Releases</a> </li>
-  Updated November 6, 2015
-  <li><a href=#>Updated November 6, 2015</a></li>
-  <li><a href=#>Annual & Interim Reports</a></li>
-    Updated November 6, 2015
+    <li><a href=#>A Message From Warren E. Buffett</a></li>
+    <li><a href=#>News Releases</a> </li>
+      <li>Updated November 6, 2015</li>
+    <li><a href=#>Updated November 6, 2015</a></li>
+    <li><a href=#>Annual & Interim Reports</a></li>
+      <li>Updated November 6, 2015</li>
     <li>Updated November 6, 2015</li>
     <li><a href=#>Warren Buffett's Letters to Berkshire Shareholders</a></li>
-    Updated February 28, 2015
+      <li>Updated February 28, 2015</li>
     <li><a href=#>Updated February 28, 2015</a></li>
     <li><a href=#>Special Letters From Warren & Charlie RE:Past, Present and Future</a></li>
     <li><a href=#>Charlie Munger's Letters to Wesco Shareholders</a></li>
@@ -28,25 +37,20 @@
     <li><a href=#>Annual Meeting Information</a></li>
     <li><a href=#>Links to Berkshire Subsidiary Companies</a></li>
     <li><a href=#>Celebrating 50 Years of a Profitable Partnership</a></li>
-    (A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)
+      <li>(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)</li>
     <li><a href=#>Corporate Governance</a></li>
     <li><a href=#>Comparative Rights and Relative Prices of Class A and B Stock</a></li>
     <li><a href=#>Owner's Manual</a></li>
-    <li>Berkshire Activewear</li>
-    <li>Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock<li>
+    <li><a href=#>Berkshire Activewear</a></li>
+    <li><a href=#>Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a><li>
   </ul>
   <hr>
-  <a href=/imgs/geicoimg.png></a>
-  <p>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY
-WWW.GEICO.COM OR CALL 1-888-395-6349, 24 HOURS A DAY
-  </p>
+    <img src="../imgs/geicoimg.png">
+    <p>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY WWW.GEICO.COM OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
   <hr>
-  <p>
-  If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="mailto:berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a>. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.
-  </p>
+  <p> If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="mailto:berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a>. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
   <hr>
-  <a href="http://www.berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
-</body>
-<p>Copyright © 1978-2015 Berkshire Hathaway Inc.</p>
-
-  </html>
+    <a href="http://www.berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
+    <p>Copyright © 1978-2015 Berkshire Hathaway Inc.</p>
+  </body>
+</html>
