Use responsive CSS

--- a/week-4/gps/gps1-2.html
+++ b/week-4/gps/gps1-2.html
@@ -1,8 +1,12 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Mike Gwozdek
+2. Taylor Daugherty
+We spent [1] hours on this challenge.
+-->
+<!-- 
+Reflection:
+I do feel more confident in CSS after the Guided Pairing Session. However, I think I need to get more comfortable with the fact that I'll never know every HTML tag and CSS property. After every assignment/pairing session I felt like I was finally comfortable with using something only to be totally stuck on the next problem.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -11,7 +15,7 @@ We spent [#] hours on this challenge.
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="gps2-1.css">  <!-- Insert a link to the stylesheet here -->
+    <link rel="stylesheet" type="text/css" href="gps1-2.css">  <!-- Insert a link to the stylesheet here -->
     <title>Git Cheat Sheet</title>
   </head>
 
